--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
         </a-entity> -->
 
         <a-entity
-        gltf-model="./space/space.gltf"
-        scale="5 5 5"
-        position="150 300 -100"
-      >
-      </a-entity>
+          gltf-model="./space/space.gltf"
+          scale="1 1 1"
+          rotation="0 90 0"
+          position="150 300 -100"
+        >
+        </a-entity>
       </a-nft>
       <!-- static camera that moves according to the device movemenents -->
       <a-entity camera></a-entity>
